API,http and Product module add

--- a/ProjectTask/src/app/customer/profile/profile.component.html
+++ b/ProjectTask/src/app/customer/profile/profile.component.html
@@ -1,1 +1,40 @@
-<p>profile works!</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>My Profile  <button class="btn btn-ligth"><small>Edit</small></button></p>
+    <table *ngFor="let item of subscription">
+        <tr>
+            <td>First Name :</td>
+            <td>item.firstName</td>
+        </tr>
+        <tr>
+            <td>Last Name</td>
+            <td>item.lastName</td>
+        </tr>
+        <tr>
+            <td>Email</td>
+            <td>item.email</td>
+        </tr>
+        <tr>
+            <td>Mobile number</td>
+            <td>item.MobileNumber</td>
+        </tr>
+        <tr>
+            <td>Gende</td>
+            <td>item.gender</td>
+        </tr>
+        <tr>
+            <td>Address</td>
+            <td>item.address</td>
+        </tr>
+        <tr>
+            <td>Date of Birth</td>
+            <td>item.Dob</td>
+        </tr>
+    </table>
+</body>
+</html>
