--- a/ProjectTask/src/app/product/product.component.html
+++ b/ProjectTask/src/app/product/product.component.html
@@ -1,1 +1,30 @@
-<p>product works!</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>List Of Product</p>
+        <input type="text" [(ngModel)]="search" placeholder="search by product name & brand name">
+
+    <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>Product Name</th>
+          <th>Product brand</th>
+          <th>price</th>
+          <th>status</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let hero of result | filter:search">
+          <td>{{hero.productName}}</td>
+          <td>{{hero.brand}}</td>
+          <td>{{hero.price}}</td>
+          <td>{{hero.status}}</td>
+        </tr>
+        </tbody>
+      </table>
+</body>
+</html>
