Product module search And sort

--- a/ProjectTask/src/app/customer/profile/profile.component.html
+++ b/ProjectTask/src/app/customer/profile/profile.component.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>My Profile  <button class="btn btn-ligth"><small>Edit</small></button></p>
+    <p>My Profile  <button class="btn btn-ligth" [routerLink]="['/edit']"><small>Edit</small></button></p>
     <table *ngFor="let item of subscription">
         <tr>
             <td>First Name :</td>
