--- a/ProjectTask/src/app/customer/profile/edit/edit.component.html
+++ b/ProjectTask/src/app/customer/profile/edit/edit.component.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form [formGroup]="registrationFormGroup">
+    <form [formGroup]="editFormGroup">
         <table>
             <tr>
                 <td>First Name</td>
@@ -18,14 +18,6 @@
             <tr>
                 <td>Email</td>
                 <td><input type="text" formControlName="email"></td>
-            </tr>
-            <tr>
-                <td>Password</td>
-                <td><input type="password" formControlName="password"></td>
-            </tr>
-            <tr>
-                <td>Confirm Password</td>
-                <td><input type="password" formControlName="confirmPassword" (blur) ="check()"></td>
             </tr>
             <tr>
                 <td>Mobile Number</td>
@@ -49,6 +41,5 @@
         </table>
         <button (click)="submit()">Submit</button>
     </form>
-    <small>Allredy Registerd ? <a [routerLink]="['/login']">Login</a> </small>
 </body>
 </html>
