Product module updated

--- a/ProjectTask/src/app/customer/profile/profile.component.html
+++ b/ProjectTask/src/app/customer/profile/profile.component.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p>My Profile  <button class="btn btn-ligth" [routerLink]="['/edit']"><small>Edit</small></button></p>
-    <table *ngFor="let item of subscription">
+    <table *ngFor="let item of result">
         <tr>
             <td>First Name :</td>
             <td>item.firstName</td>
