--- a/ProjectTask/src/app/product/product.component.html
+++ b/ProjectTask/src/app/product/product.component.html
@@ -11,9 +11,9 @@
     <table class="table table-striped">
         <thead>
         <tr>
-          <th (click)="sort('productName')" >Product Name</th>
-          <th (click)="sort('brand')">Product brand</th>
-          <th (click)="sort('price')">price</th>
+          <th>Product Name</th>
+          <th>Product brand</th>
+          <th>price</th>
           <th>status</th>
         </tr>
         </thead>
