--- a/ProjectTask/src/styles.css
+++ b/ProjectTask/src/styles.css
@@ -1,1 +1,1 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/ag-grid-community/src/styles/ag-grid.scss";
